Run action on debug mode

--- a/.github/workflows/12-backend-jacoco.yml
+++ b/.github/workflows/12-backend-jacoco.yml
@@ -58,6 +58,6 @@ jobs:
         folder: target/site/jacoco # The folder where mvn puts the files
         clean: true # Automatically remove deleted files from the deploy branch
         target-folder: ${{env.prefix}}jacoco # The folder that we serve our files from
-
+    debug: true
 
   
