change for create tables by June

--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -1,3 +1,3 @@
-GOOGLE_CLIENT_ID=see-instructions-in-readme
-GOOGLE_CLIENT_SECRET=see-instructions-in-readme
-ADMIN_EMAILS=phtcon@ucsb.edu
+GOOGLE_CLIENT_ID=792046926630-d3l9mu78150nef1qk05tg4a73hpbsdq7.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+ADMIN_EMAILS=adilahmed@ucsb.edu,gracefeng@ucsb.edu,aagarwal@ucsb.edu,katelarrick@ucsb.edu,koraykondakci@ucsb.edu,zhenbi@ucsb.edu,phtcon@ucsb.edu,aasish@ucsb.edu,sangitakunapuli@ucsb.edu,sanilkatula@ucsb.edu,whuang602@ucsb.edu,andrewpeng@ucsb.edu,anika_arora@ucsb.edu 
